--- a/examples/edge_constrained_density_minimisation.ipynb
+++ b/examples/edge_constrained_density_minimisation.ipynb
@@ -53,7 +53,7 @@
     "edge_coeffs = fa.compute_hom_coefficients(edge, atlas)\n",
     "\n",
     "# Set up the SDP coefficients for n vertices and k labelled vertices\n",
-    "sdp_coeffs = fa.compute_averaged_flag_product_coefficients(atlas, n, k)"
+    "grouped_sdp_coeffs = fa.compute_grouped_averaged_flag_product_coefficients(atlas, n, k, verbose=True)"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "  problem, variable_dict = bp.build_problem(\n",
     "    objectives=[('hom', H, 1, h_coeffs)], # Density of H is objective\n",
     "    constraints=[('hom', edge, 1 - 1/p, edge_coeffs)], # Edge density equals to 1 - 1 / p\n",
-    "    sdp_configs=[(n, k, sdp_coeffs)], # Use SDP matrix whose basis is formed by n-vertex flags with k labelled vertices\n",
+    "    sdp_configs=[(n, k, grouped_sdp_coeffs)], # Use SDP matrix whose basis is formed by n-vertex flags with k labelled vertices\n",
     "    lowerbound=True, # Solve for lower bound finding\n",
     "  )\n",
     "  problem.solve(solver=cp.SCS) # Solve with SCS solver. MOSEK can be used, but requires larger memory usage.\n",
