Add (6, 5) to sdp_configs in example notebooks
Updated the sdp_configs parameter in both induced_density_maximisation.ipynb and ramsey_multiplicity.ipynb to include the (6, 5) configuration, allowing for higher-order SDP relaxations in the example problems.

--- a/examples/induced_density_maximisation.ipynb
+++ b/examples/induced_density_maximisation.ipynb
@@ -140,7 +140,7 @@
     "problem, variable_dict = bp.build_problem(\n",
     "  objectives=[('ind', nx.cycle_graph(5), 1)],\n",
     "  constraints=[],\n",
-    "  sdp_configs=[(4, 1), (5, 3)],\n",
+    "  sdp_configs=[(4, 1), (5, 3), (6, 5)],\n",
     "  lowerbound=False\n",
     ")\n",
     "\n",
