--- a/examples/ramsey_multiplicity.ipynb
+++ b/examples/ramsey_multiplicity.ipynb
@@ -70,7 +70,7 @@
     "problem, variable_dict = bp.build_problem(\n",
     "  objectives = [('hom', H, 1), ('hom', H, 1, comp_coeff)],\n",
     "  constraints = [],\n",
-    "  sdp_configs = [(4, 1), (5, 3)],\n",
+    "  sdp_configs = [(4, 1), (5, 3), (6, 5)],\n",
     "  lowerbound=True,\n",
     ")\n",
     "\n",
